- [22-23 June 2004] `make install' now installs also pa_[or].cmx, pa_[or]p.cmx,
  pa_[or]_fast.cmx, and odyl.cmx
- [12 may 2004] Added to the camlp4 tools the -version option that prints
  the version number, in the same way as the other ocaml tools.
- [12 may 04] Locations are now handled as in OCaml. The main benefit
  is that line numbers are now correct in error messages. However, this
  slightly changes the interface of a few Camlp4 modules (see ICHANGES).
  ** Warning: Some contribs of the camlp4 distribution are broken because
  of this change. In particular the scheme/lisp syntaxes.
- [20 nov 03] Illegal escape sequences in strings now issue a warning.

Camlp4 Version 3.07
___________________

- [29 Sep 03] Camlp4 code now licensed under the LGPL minus clause 6.
- [09 Sep 03] Added tokens LABEL and OPTLABEL in plexer, and use them in
  both parsers (ocaml and revised). There was, afaik, no other way to fix
  ambiguities (bugs) in parsing labels and type constraints.

Camlp4 Version 3.07 beta1
________________________

- [July 03] Updated the ocaml/camlp4 CVS tree with the camlp4
  "parallel" CVS tree, which becomes obsolete from now on.
   Added support for recursive modules, private data constructors, and
   new syntaxes for integers (int32, nativeint, ...).

Camlp4 Version 3.06++
-----------------------

- [02 Dec 02] In AST predefined quotation, changed antiquotations for
  "rec", "mutable": now all are with coercion "opt": $opt:...$ (instead
  of "rec" and "mut"). Added antiquotation for "private". Cleaned up
  the entries for "methods" and for labelled and optional parameters.
- [29 Nov 02] Removed all "extract_crc" stuff no more necessary with
  the new interface of Dynlink.
- [26 Nov 02] Added ability to use "#use" directives in compiled files.
- [21 Nov 02] Changed Scheme syntax for directives: now, e.g. #load "file"
  is written: # (load "file"). Added directives in "implem", "interf" and
  "use" directive.