@@ -1,14 +1,22 @@
 # $Id$
 
+# Change the value of PROFILING to prof for systematically building
+# and installing profiled versions of Camlp4 libraries. Then, execute
+# `make opt.opt', then `make install' in the OCaml toplevel directory
+# (or in the camlp4 subdirectory).
+
+# Default value is noprof
+
+#PROFILING=prof
+PROFILING=noprof
+
+###########################################################################
+
 CAMLP4_COMM=OTOP=$(OTOP) OPT=$(OPT) EXE=$(EXE) ../tools/camlp4_comm.sh
 OCAMLC=@OTOP=$(OTOP) OPT=$(OPT) EXE=$(EXE) ../tools/ocamlc.sh
 OCAMLOPT=@OTOP=$(OTOP) OPT=$(OPT) EXE=$(EXE) ../tools/ocamlopt.sh
 OCAMLCFLAGS=
 MKDIR=mkdir -p
-
-# Uncomment this for systematically building profiled versions of
-# Camlp4 libraries
-PROFILING=prof
 
 TESTDIRECTORY= test `basename "$<"` != "$<" && { echo "You are not in the right directory"; exit 1; }
 
